# server/src/main/java/com/boschat/sikb/api/impl/ClubsApiServiceImpl.java
@@ -21,6 +21,12 @@ import static com.boschat.sikb.api.CallType.CLUB_DELETE;
 import static com.boschat.sikb.api.CallType.CLUB_FIND;
 import static com.boschat.sikb.api.CallType.CLUB_GET;
 import static com.boschat.sikb.api.CallType.CLUB_UPDATE;
+import static com.boschat.sikb.api.CallType.TEAM_CREATE;
+import static com.boschat.sikb.api.CallType.TEAM_DELETE;
+import static com.boschat.sikb.api.CallType.TEAM_FIND;
+import static com.boschat.sikb.api.CallType.TEAM_GET;
+import static com.boschat.sikb.api.CallType.TEAM_MEMBERS_FIND;
+import static com.boschat.sikb.api.CallType.TEAM_UPDATE;
 
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", date = "2019-01-17T10:05:39.503+01:00[Europe/Paris]")
 public class ClubsApiServiceImpl extends ClubsApiService {
@@ -32,7 +38,7 @@ public class ClubsApiServiceImpl extends ClubsApiService {
 
     @Override
     public Response createTeam(String accessToken, Integer clubId, String seasonId, TeamForCreation teamForCreation, SecurityContext securityContext) {
-        return null;
+        return runService(TEAM_CREATE, accessToken, securityContext, clubId, seasonId, teamForCreation);
     }
 
     @Override
@@ -42,7 +48,8 @@ public class ClubsApiServiceImpl extends ClubsApiService {
 
     @Override
     public Response deleteTeam(String accessToken, Integer clubId, String seasonId, Integer teamId, SecurityContext securityContext) {
-        return null;
+        return runService(TEAM_DELETE, accessToken, securityContext, clubId, seasonId, teamId);
+
     }
 
     @Override
@@ -51,20 +58,25 @@ public class ClubsApiServiceImpl extends ClubsApiService {
     }
 
     @Override
+    public Response findTeams(String accessToken, Integer clubId, String seasonId, SecurityContext securityContext) {
+        return runService(TEAM_FIND, accessToken, securityContext, clubId, seasonId);
+
+    }
+
+    @Override
     public Response getClubById(String accessToken, Integer clubId, SecurityContext securityContext) {
         return runService(CLUB_GET, accessToken, securityContext, clubId);
     }
 
     @Override
-    public Response getTeam(String accessToken, Integer clubId, String seasonId, Integer teamId,
-        SecurityContext securityContext) {
-        return null;
+    public Response getTeam(String accessToken, Integer clubId, String seasonId, Integer teamId, SecurityContext securityContext) {
+        return runService(TEAM_GET, accessToken, securityContext, clubId, seasonId, teamId);
+
     }
 
     @Override
-    public Response getTeamMembers(String accessToken, Integer clubId, String seasonId,
-        Integer teamId, SecurityContext securityContext) {
-        return null;
+    public Response getTeamMembers(String accessToken, Integer clubId, String seasonId, Integer teamId, SecurityContext securityContext) {
+        return runService(TEAM_MEMBERS_FIND, accessToken, securityContext, clubId, seasonId, teamId);
     }
 
     @Override
@@ -74,9 +86,10 @@ public class ClubsApiServiceImpl extends ClubsApiService {
     }
 
     @Override
-    public Response updateTeam(String accessToken, Integer clubId, String seasonId, Integer teamId,
-        TeamForUpdate teamForUpdate, SecurityContext securityContext) {
-        return null;
+    public Response updateTeam(String accessToken, Integer clubId, String seasonId, Integer teamId, TeamForUpdate teamForUpdate,
+        SecurityContext securityContext) {
+        return runService(TEAM_UPDATE, accessToken, securityContext, clubId, seasonId, teamId, teamForUpdate);
+
     }
 
     @Override
